ingress/experiments/caddy/torrent-ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: rutorrent
  namespace: torrent-rutorrent
  annotations:
    kubernetes.io/ingress.class: caddy
spec:
  ingressClassName: nginx
  rules:
  - host: torrent.example.duckdns.org
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: torrent-rutorrent-service
            port:
              number: 80
